--- a/publication/journal-article/cite.bib
+++ b/publication/journal-article/cite.bib
@@ -1,8 +1,294 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+
+@Unpublished{c99_2,
+  Title                    = {Estimating daily nutrition intakes - a literature review},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 2.0},
+  Month                    = {12/},
+  Year                     = {2009}
+}
+
+@Manual{DDCP,
+  Title                    = {{DDC}P: Tools to compute data-driven conditional probability for a time-to-event endpoint},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0.0},
+  Year                     = {2013}
+}
+
+@Manual{OrdFacReg,
+  Title                    = {OrdFacReg: Least Squares, Logistic, and Cox-regression with Ordered Predictors},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0.1},
+  Year                     = {2009},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.02.05},
+  Url                      = {http://CRAN.R-project.org/package=OrdFacReg}
+}
+
+@TechReport{PONCHO1,
+  Title                    = {{PON}CHO analysis},
+  Author                   = {Rufibach, Kaspar},
+  Institution              = {Biostatistics Unit, University of Zurich},
+  Year                     = {2010},
+  Number                   = {Version 1.0}
+}
+
+@Manual{pts,
+  Title                    = {PTS: Tools to compute probability of technical success for a time-to-event endpoint},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0.0},
+  Year                     = {2013}
+}
+
+@Article{reporttools,
+  Title                    = {reporttools: R Functions to Generate {\LaTeX} Tables of Descriptive Statistics},
+  Author                   = {Kaspar Rufibach},
+  Journal                  = {Journal of Statistical Software, Code Snippets},
+  Year                     = {2009},
+  Number                   = {1},
+  Volume                   = {31},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Manual{reporttools_pack,
+  Title                    = {reporttools: Generate LaTeX tables of descriptive statistics},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0.3},
+  Year                     = {2009},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_aging,
+  Title                    = {Age data},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 5},
+  Month                    = {12/},
+  Year                     = {2007}
+}
+
+@Unpublished{rufi_alzheimer_humans,
+  Title                    = {Alzheimer data},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 4},
+  Month                    = {10/},
+  Year                     = {2007}
+}
+
+@Unpublished{rufi_antibody,
+  Title                    = {Antibody data},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 4},
+  Month                    = {4/},
+  Year                     = {2008},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_bard11,
+  Title                    = {Second malignant neoplasms},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 1.1},
+  Month                    = {12/},
+  Year                     = {2008},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_mice,
+  Title                    = {Mice data},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 2},
+  Month                    = {12/},
+  Year                     = {2007},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_plasma,
+  Title                    = {PLASMA analysis},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 1.7},
+  Month                    = {1/},
+  Year                     = {2009}
+}
+
+@TechReport{rufi_pudding,
+  Title                    = {{MRI} in Morbus Bechterew ({PUDDING} study)},
+  Author                   = {Rufibach, Kaspar},
+  Institution              = {Biostatistics Unit, University of Zurich},
+  Year                     = {2008},
+  Month                    = {10},
+  Number                   = {Version 3.4},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_satoris,
+  Title                    = {{Analysis of signaling moleculs dataset for Satoris Inc.}},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version 1.2 of January 19, 2009},
+  Month                    = {1/},
+  Year                     = {2009},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_satoris_phaseI,
+  Title                    = {{Predict status from {AI}BL dataset using original analysis results}},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version PhaseI/1.2 of June 17, 2009},
+  Month                    = {6/},
+  Year                     = {2009},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Unpublished{rufi_satoris_phaseII,
+  Title                    = {{Analysis of RBM500, {AI}BL, and UPENN datasets, Phase II: Develop signature on RBM500 + {AI}BL}},
+  Author                   = {Rufibach, Kaspar},
+  Note                     = {Version PhaseII/1.0 of July 21, 2009},
+  Month                    = {7/},
+  Year                     = {2009},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@PhdThesis{rufibach_06,
+  Title                    = {Log-concave density estimation and bump hunting for I.I.D. observations},
+  Author                   = {Rufibach, Kaspar},
+  School                   = {Universities of Bern and G\"ottingen},
+  Year                     = {2006},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.01.29}
+}
+
+@Article{rufibach_07,
+  Title                    = {Computing Maximum Likelihood Estimators of a Log-Concave Density Function},
+  Author                   = {Rufibach, Kaspar},
+  Journal                  = {J. Statist. Comput. Simulation},
+  Year                     = {2007},
+  Pages                    = {561--574},
+  Volume                   = {77},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.09.10}
+}
+
+@Article{rufibach_10,
+  Title                    = {An Active Set Algorithm to Estimate Parameters in Generalized Linear Models with Ordered Predictors},
+  Author                   = {Kaspar Rufibach},
+  Journal                  = {Comput. Statist. Data Anal.},
+  Year                     = {2010},
+  Number                   = {6},
+  Pages                    = {1442 - 1456},
+  Volume                   = {54},
+  Doi                      = {DOI: 10.1016/j.csda.2010.01.014},
+  Keywords                 = {Ordered explanatory variable},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.03.17}
+}
+
+@Article{rufibach_10_jce,
+  Title                    = {Use of Brier score to assess binary predictions},
+  Author                   = {Kaspar Rufibach},
+  Journal                  = {Journal of Clinical Epidemiology},
+  Year                     = {2010},
+  Number                   = {8},
+  Pages                    = {938 - 939},
+  Volume                   = {63},
+  Doi                      = {DOI: 10.1016/j.jclinepi.2009.11.009},
+  ISSN                     = {0895-4356},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.07.19},
+  Url                      = {http://www.sciencedirect.com/science/article/B6T84-4YH4922-4/2/f96e5fd57d62e6477ddd7a412b252bd6}
+}
+
+@Article{rufibach_11,
+  Title                    = {{{A}ssessment of paired binary data}},
+  Author                   = {Rufibach, K. },
+  Journal                  = {Skeletal Radiology},
+  Year                     = {2011},
+  Pages                    = {1--4},
+  Volume                   = {40}
+}
+
+@Article{rufibach_12,
+  Title                    = {A smooth ROC curve estimator based on log-concave density estimates},
+  Author                   = {Kaspar Rufibach},
+  Journal                  = {Int. J. Biostat.},
+  Year                     = {2012},
+  Number                   = {1},
+  Pages                    = {1--29},
+  Volume                   = {8},
+  Url                      = {http://arxiv.org/abs/1103.1787}
+}
+
+@Misc{rufibach_13,
+  Title                    = {{Probability of technical success: Conditional Power, {Bayes}ian Predictive Power, or {Bayes}ian Updating?}},
+  Author                   = {Rufibach, K.},
+  HowPublished             = {Talk given in the Biostatistics Oncology Basel/Welwyn/Shanghai (BOB) meeting, 4 February 2013},
+  Month                    = {January},
+  Note                     = {Available on HIVE: \url{https://pdlive.gene.com/thread/10809}},
+  Year                     = {2013}
+}
+
+@Article{rufibach_19,
+  Title                    = {Treatment effect quantification for time-to-event endpoints -- Estimands, analysis strategies, and beyond},
+  Author                   = {Rufibach, Kaspar},
+  Journal                  = {Pharmaceutical Statistics},
+  Year                     = {2019},
+  Pages                    = {144--164},
+  Volume                   = {18},
+  Doi                      = {10.1002/pst.1917},
+  Eprint                   = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pst.1917},
+  Keywords                 = {causal inference, censoring, estimand, randomized clinical trial, sensitivity analysis, time-to-event},
+  Url                      = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pst.1917}
+}
+
+@Article{rufibach_meta11,
+  Title                    = {Selection models with monotone weight functions in meta analysis},
+  Author                   = {Rufibach, K.},
+  Journal                  = {Biom. J.},
+  Year                     = {2011},
+  Pages                    = {to appear},
+  Owner                    = {rufibach},
+  Timestamp                = {2011.03.23}
+}
+
+@Manual{selectMeta,
+  Title                    = {selectMeta: Estimation weight functions in meta analysis},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0-0},
+  Year                     = {2010},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.02.09}
+}
+
+@Manual{teachingUZH,
+  Title                    = {teachingUZH: Provide teaching material},
+  Author                   = {Kaspar Rufibach},
+  Note                     = {R package version 1.0.1},
+  Year                     = {2010},
+  Owner                    = {rufibach},
+  Timestamp                = {2011.01.05},
+  Url                      = {http://www.biostat.uzh.ch}
+}
+
+@Manual{logcondiscr,
+  Title                    = {logcondiscr: Estimate a Log-Concave Probability Density from discrete iid Observations},
+  Author                   = {Kaspar Rufibach and Fadoua Balabdaoui and Hanna Jankowski and Kathrin Weyermann},
+  Note                     = {R package version 1.0.0},
+  Year                     = {2011},
+  Owner                    = {rufibach},
+  Timestamp                = {2010.05.31}
+}
+
+@Article{rufibach_15,
+  Title                    = {Bayesian Predictive Power: Choice of Prior and some Recommendations for its Use as Probability of Success in Drug Development},
+  Author                   = {Rufibach, K. and Burger, H.U. and Abt, M.},
+  Journal                  = {Pharm. Stat.},
+  Year                     = {2016},
+  Pages                    = {438-446},
+  Volume                   = {15},
+  Institution              = {Roche}
 }
